# popcorn

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  linker.ld
arch/boot/: _loader.s
arch/versatile-pb/: interrupts.s  sic.s  uart0.s  vic.s
boot/: _loader.s  atags.s  boot.s  vectors.s
devices/: CMakeLists.txt
devices/interrupt-controller/: CMakeLists.txt
devices/interrupt-controller/arm-gicv2/: CMakeLists.txt  arm_gicv2.c  arm_gicv2.h  arm_gicv2_common.h  arm_gicv2_cpu_if.h  arm_gicv2_dist_if.h
devices/interrupt-controller/arm-gicv3/: CMakeLists.txt  arm_gicv3.c  arm_gicv3.h  arm_gicv3_common.h  arm_gicv3_cpu_if.h  arm_gicv3_dist_if.h  arm_gicv3_rdist_if.h
devices/interrupt-controller/bcm2836-l1-intc/: CMakeLists.txt  bcm2836_l1_intc.c  bcm2836_l1_intc.h  bcm2836_l1_intc_if.h
devices/serial/: CMakeLists.txt
devices/serial/arm-pl011/: CMakeLists.txt  arm_pl011.c  arm_pl011.h  arm_pl011_if.h
devices/serial/bcm2385-aux-uart/: CMakeLists.txt  bcm2385_aux_uart.c  bcm2385_aux_uart.h  bcm2385_aux_uart_if.h
drivers/: sic.c  vic_pl190.c
include/: ctype.h  stddef.h  stdint.h  stdio.h  string.h
include/drivers/: sic.h  vic_pl190.h
include/interrupts/: vic_pl190.h
include/kernel/: atomic.h  barrier.h  bitmap.h  cache.h  devicetree.h  evt.h  exceptions.h  fdt.h  hash.h  interrupts.h  kassert.h  kernutil.h  kheap.h  kmem.h  kresult.h  kstdio.h  mm.h  mm_types.h  mmu.h  page.h  panic.h  pmap.h  pmm.h  rbtree.h  slab.h  spinlock.h  vm_km.h  vm_map.h  vm_object.h  vm_page.h  vmap.h  vmm.h
include/kernel/arch/: asm.h  (+6 more)
include/lib/: asm.h  bithacks.h  bitmap.h  fdt.h  list.h  rbtree.h
include/mach/: interrupts.h
include/platform/: interrupts.h  iomem.h  irq.h  regs.h
include/sys/: interrupts.h  types.h
init/: main.c
interrupts/: interrupt_handlers.c  irq_handler.c  vic_pl190.c
kernel/: CMakeLists.txt  __start.s  _atomic.s  _barrier.s  _cache.s  _evt.s  _exceptions.s  _interrupts.s  _mmu.s  _relocate.s  _start.s  bitmap.c  bitmap.h  console.c  console.h  console_types.h  devicetree.c  devicetree.h  exceptions.c  fdt.c  fdt.h  hash.h  interrupts.c  interrupts.s  irq.c  irq.h  irq_types.h  kassert.h  kernutil.c  kheap.c  kmain.c  kmem.c  kmem.h  kmem_slab.c  kmem_slab.h  kresult.h  kstdio.c  kstdio.h  list.c  list.h  (+22 more)
kernel/arch/: CMakeLists.txt  __start.s  _arch_exceptions.s  _arch_thread.s  _atomic.s  _cache.s  _interrupts.s  _relocate.s  _start.s  arch_asm.h  arch_asm.s  arch_atomic.h  arch_atomic.s  arch_barrier.h  arch_barrier.s  arch_cache.h  arch_cache.s  arch_exceptions.c  arch_exceptions.h  arch_interrupts.h  arch_interrupts.s  arch_mmu.h  arch_mmu.s  arch_thread.c  arch_thread.h  arch_timer.h  arch_timer.s  linker.ld  pmap.c  pmap.h
kernel/boot/: _loader.s  boot.s
kernel/init/: kmain.c
kernel/proc/: CMakeLists.txt  proc_init.c  proc_init.h  proc_scheduler.c  proc_scheduler.h  proc_task.c  proc_task.h  proc_thread.c  proc_thread.h  proc_types.h
kernel/vfs/: CMakeLists.txt  vfs_mount.c  vfs_mount.h  vfs_node.c  vfs_node.h
kernel/vm/: CMakeLists.txt  vm_init.c  vm_init.h  vm_km.c  vm_km.h  vm_map.c  vm_map.h  vm_object.c  vm_object.h  vm_page.c  vm_page.h  vm_types.h
kernel/vmm/: CMakeLists.txt  vm_km.c  vm_map.c  vm_object.c  vm_page.c  vmm.c
lib/: _asm.s  _libasm.s  bithacks.c  bitmap.c  fdt.c  list.c  rbtree.c  stdio.c  string.c  uidivmod.s  vsprintf.c
mach/versatile-pb/: _interrupts.s  interrupts.c  sic.c  sic.h  uart0.c  uart0.s  vic.c  vic.h
platform/: CMakeLists.txt  platform.c  platform.h  platform_table.h
platform/beagleboneblack/: mm.c  putchar.c
platform/qemu-virt/: CMakeConfig.txt  CMakeLists.txt  platform.c  qemu_virt_platform.c
platform/raspberry-pi-3/: CMakeConfig.txt  CMakeLists.txt  platform.c  raspberry_pi_3_platform.c
platform/raspberry-pi-4/: CMakeLists.txt  raspberry_pi_4_platform.c
platform/raspberrypi3/: putchar.c
platform/realview-pb/: interrupts.c  irq.c  putchar.c
platform/realviewpb/: putchar.c
platform/versatile-pb/: _interrupts.s  interrupts.c  putchar.c  sic.c  uart0.c
platform/versatilepb/: irq.c  putchar.c
platform/virt/: irq.c  mm.c  putchar.c
qemu/: gdb.sh  sim.sh
tools/: .gdbinit  README.md  emulator  gdb.sh  openocd.cfg  openocd_gdbinit  qemu_gdbinit  rpi3.cfg  rpi4.cfg  run-qemu.py  sim.sh
utils/: CMakeLists.txt  ctype.c  stdio.c  string.c  vsprintf.c
(+30 files in other folders)
